:fire: change theme color

--- a/app.css
+++ b/app.css
@@ -33,13 +33,13 @@ textarea {
 input:focus,
 textarea:focus {
   outline: none;
-  background: #fff5f9;
+  background: #cfeee7;
 }
 
 button {
   font: inherit;
-  background: #ff0062;
-  border: 1px solid #ff0062;
+  background: #046650;
+  border: 1px solid #046650;
   cursor: pointer;
   color: white;
   padding: 0.75rem 1rem;
@@ -51,17 +51,17 @@ button:focus {
 
 button:hover,
 button:active {
-  background: #a80041;
-  border-color: #a80041;
+  background: #21bb99;
+  border-color: #21bb99;
 }
 
 .projects {
   margin: 1rem;
-  border: 1px solid #ff0062;
+  border: 1px solid #046650;
 }
 
 .projects header {
-  background: #ff0062;
+  background: #046650;
   height: 3.5rem;
   display: flex;
   justify-content: center;
@@ -94,7 +94,7 @@ button:active {
 }
 
 .projects li h2 {
-  color: #ff0062;
+  color: #046650;
   margin: 0.5rem 0;
 }
 
@@ -112,7 +112,7 @@ button:active {
 }
 
 .droppable {
-  background: #ffe3ee;
+  background: #cfeee7;
 }
 
 #finished-projects .droppable {
@@ -122,6 +122,6 @@ button:active {
 #user-input {
   margin: 1rem;
   padding: 1rem;
-  border: 1px solid #ff0062;
+  border: 1px solid #046650;
   background: #f7f7f7;
 }
